--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ python-dotenv==0.21.0; python_version >= '3.7'
 python-editor==1.0.4
 setuptools==69.5.1; python_version >= '3.8'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlalchemy==2.0.29; python_version >= '3.7'
+sqlalchemy==1.4.46; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 typing-extensions==4.11.0; python_version >= '3.8'
 werkzeug==2.2.2; python_version >= '3.7'
 wtforms==3.0.1; python_version >= '3.7'
