--- a/Pipfile
+++ b/Pipfile
@@ -22,11 +22,13 @@ flask-wtf = "==1.1.1"
 jinja2 = "==3.1.2"
 mako = "==1.2.4"
 markupsafe = "==2.1.2"
-sqlalchemy = "*"
+sqlalchemy = "==1.4.46"
 werkzeug = "==2.2.2"
 wtforms = "==3.0.1"
 importlib-metadata = "==6.9.0"
 zipp = "==3.17.0"
+boto3 = "*"
+typing-extensions = "==4.11.0"
 
 [dev-packages]
 
